--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -201,7 +201,7 @@ import Layout from "@layouts/Layout.astro";
     <a class="grid-a" title="Same day wine cellar repair Los Angeles" href="/book">BOOK US </a>
 </span>
           </div>
-    <div>
+        </div>
     <div class="container">
     <h3>Heating Ventilation And Air-Conditioning Service, Repair And Installation</h3>
     <p>Expert repair and installation of heating ventilation and AC by our trained technicians</p>
@@ -239,7 +239,7 @@ import Layout from "@layouts/Layout.astro";
                         </span>
                                           </div>
     <!--The above is the main content for aea pages-->
-    <div class="category-items d-flex justify-content-between" style="background-color:#F2F1F0">
+    <div style="background-color:#F2F1F0">
     <div class="container">
 
         <!--<div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">-->
@@ -257,7 +257,6 @@ import Layout from "@layouts/Layout.astro";
     <br><p>We prioritize prompt service, aiming to reach you on the same day you call, while considering your convenience and scheduling preferences. To ensure efficient repairs, our technicians carry most parts in their vans, enabling immediate solutions. If a part needs ordering, we strive for the fastest possible delivery.</p>
     <br><h3>Pricing</h3>
     <br><p>Our service call fee is $65. Upon your agreement, this fee will be deducted from the total cost of repair. Furthermore, we provide a 1 year warranty on all installed parts, ensuring long-term peace of mind.</p>
-  </div></div></div></div>
     </div>
       </div>
 </main>
