--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -270,8 +270,8 @@ const makeTitle = title
   border-radius:15px;
   margin: 15px auto 15px auto;}
   p{margin:10px;}
-  h2{margin-top:25px}
-  h3{margin-top:25px;}
+  h2{margin-top:25px; font-weight:800; font-size:25px!Important;}
+  h3{margin-top:25px;font-weight:800; font-size:22px!Important;}
   .anchor{color:#124ded; font-size:17px;}
     .anchor:hover{text-decoration: underline;}
    /*header for pages*/
