--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -1,6 +1,6 @@
 ---
 import Container from "@components/container.astro";
-import Cta from "@components/pcta.astro";
+import Pasadenacta from "@components/pasadenacta.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
@@ -318,7 +318,7 @@ import Layout from "@layouts/Layout.astro";
 <h3>What is the cost of the service call?</h3>
 <p>The cost for the service visit is a flat rate of $65, in case you want to repair your unit, the service fee is waved and you only pay the cost of the repair.</p>
 </div>
-<Pcta />
+<Pasadenacta />
 </Container>
 </Layout>
 
