--- a/src/components/losangeles.astro
+++ b/src/components/losangeles.astro
@@ -1,8 +1,9 @@
+
 ---
 import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
 ---
-<iframe loading="lazy" width="100%" height="400" title="Same Day APpliance Repair - areas we serve"src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0;"></iframe>
+<iframe loading="lazy" width="100%" height="400" title="Same Day Appliance Repair Service in Los Angeles" style="border:0;" src="https://www.google.com/maps/d/u/0/embed?mid=1ssYn8RJn6Et0vt4BvYlvdrhH7xzFHGA&ehbc=2E312F"></iframe>
 <div
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
 
