--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -250,14 +250,17 @@ import Layout from "@layouts/Layout.astro";
     <br><p>We work with all brands, including but not limited to Samsung, Whirlpool, KitchenAid, Bosch, Frigidaire, Maytag, Sub-Zero, Subzero, Kenmore, General Electric, GE, LG, Liebherr, JennAir, Dacor, Thermador, Fisher & Paykel, Viking, Whirlpool, Whirlpool, and numerous others. With Same Day Appliance Repair, you can trust that your appliances are in capable hands. Appliance repair is our expertise, entrusted to our team of skilled professionals. With extensive experience under their belt, our technicians deliver the highest quality repair service.</p></div></div>
     <div class="category category-0" style="background-color:#ffffff;" >
     <div class="container">
-    <h2>Same Day Appliance Repair for Commercial & Household Use - How We Work</h2>
-    <br><h3>Parts</h3>
-    <br><p> No matter the issue, we assure fast resolution, eliminating any cause for concern. Our licensed and certified technicians exclusively utilize new, high-quality parts from accredited suppliers. Regular professional training keeps our technicians up-to-date with the latest models and components.</p>
-    <br><h3>Scheduling</h3>
-    <br><p>We prioritize prompt service, aiming to reach you on the same day you call, while considering your convenience and scheduling preferences. To ensure efficient repairs, our technicians carry most parts in their vans, enabling immediate solutions. If a part needs ordering, we strive for the fastest possible delivery.</p>
-    <br><h3>Pricing</h3>
-    <br><p>Our service call fee is $65. Upon your agreement, this fee will be deducted from the total cost of repair. Furthermore, we provide a 1 year warranty on all installed parts, ensuring long-term peace of mind.</p>
-    </div>
+    <h2>How to Schedule Same-Day Appointment For Appliance Repair in Los Angeles and Surrounding Areas and What to Expect</h2>
+    <h3>How to Contact Us</h3>
+    <br><p> Contacting us directly via the phone is the most efficient method to arrange your same-day service appointment. You can also book your appointment online and specify the details of the appointment such as the brand of your appliance, a specific issue, date, and time.</p>
+    <br><h3>Service Fee Cost and When Is It Waved</h3>
+    <br><p>We charge a service fee of $65 for household appliances. Upon arrival, our technician will assess the issue and inform you of the total repair cost. This puts you in control, allowing you to decide whether to proceed with the repair. If you choose to go ahead with the repair, we will waive the initial service fee, and you'll only be responsible for the repair costs</p>
+    <br><h3>Our Hours Of Operation</h3>
+    <br><p>We answer the phone Monday through Saturday, 8 am to 8 pm, However, our technicians can be on-site at an earlier or a later hour including Sunday. Our team approaches each job with a positive, can-do attitude and therefore if your repairs need to be done on a Sunday, we can assist you as well.</p>
+<h3>Cost Of The Appliance Repair</h3>  
+<p>Our repair process is grounded in transparency and integrity. We prioritize honesty and clear communication in every repair job. Our skilled technicians will thoroughly explain the nature of the problem with your refrigerator and provide a detailed repair quote upfront, ensuring there are no hidden charges.</p>
+<p>You may refer to the price list on our website to get an idea of what it might cost. While our price list offers a preliminary estimate, remember that only a qualified technician can accurately diagnose the issue with your appliance. Often, what a customer assumes to be the problem can turn out to be something completely different, ranging from a basic issue like a malfunctioning outlet to more complex problems like a faulty compressor.</p> 
+</div>
       </div>
 </main>
     <Cta />
