--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -258,7 +258,7 @@ import Layout from "@layouts/Layout.astro";
     <br><h3>Our Hours Of Operation</h3>
     <br><p>We answer the phone Monday through Saturday, 8 am to 8 pm, However, our technicians can be on-site at an earlier or a later hour including Sunday. Our team approaches each job with a positive, can-do attitude and therefore if your repairs need to be done on a Sunday, we can assist you as well.</p>
 <h3>Cost Of The Appliance Repair</h3>  
-<p>Our repair process is grounded in transparency and integrity. We prioritize honesty and clear communication in every repair job. Our skilled technicians will thoroughly explain the nature of the problem with your refrigerator and provide a detailed repair quote upfront, ensuring there are no hidden charges.</p>
+<p>Our repair process is grounded in transparency and integrity. We prioritize honesty and clear communication in every repair job. Our skilled technicians will thoroughly explain the nature of the problem with your appliance and provide a detailed repair quote upfront, ensuring there are no hidden charges.</p>
 <p>You may refer to the price list on our website to get an idea of what it might cost. While our price list offers a preliminary estimate, remember that only a qualified technician can accurately diagnose the issue with your appliance. Often, what a customer assumes to be the problem can turn out to be something completely different, ranging from a basic issue like a malfunctioning outlet to more complex problems like a faulty compressor.</p> 
 </div>
       </div>
