--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -8,6 +8,9 @@ const menuitems = [
   {
     title: "Services",
     path: "/services/commercial-and-household",
+    children: [
+    { title: "Refrigerator repair", path: "/services/refrigerator-repair" },
+    ],
   },
   {
     title: "Service Areas",
