--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -9,7 +9,9 @@ const menuitems = [
     title: "Services",
     path: "/services/commercial-and-household",
     children: [
-    { title: "Refrigerator repair", path: "/services/refrigerator-repair" },
+    { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
+    { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
+    
     ],
   },
   {
