--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -10,6 +10,7 @@ const menuitems = [
     path: "/services/commercial-and-household",
     children: [
     { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
+    { title: "Freezer Repair", path: "/services/freezer-repair" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
     ],
