--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -388,7 +388,7 @@ const makeTitle = title
 
 /*Accordion for FAQs*/
 .accordion {
-  max-width: 600px;
+  max-width: 90%;
   margin: auto;
 }
 
@@ -401,7 +401,7 @@ const makeTitle = title
 }
 
 .accordion-title {
-  padding: 15px;
+  padding: 0 15px 0 15px;
   margin: 0;
   background-color: #f7f7f7;
   cursor: pointer;
@@ -412,7 +412,7 @@ const makeTitle = title
 }
 
 .accordion-content {
-  padding: 15px;
+  padding: 8px;
   display: none;
   background-color: #fff;
 }
