--- a/src/pages/services/commercial-and-household.astro
+++ b/src/pages/services/commercial-and-household.astro
@@ -6,7 +6,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="">
+ <Layout title="Commercial And Household Appliance Repair Los Angeles and Surrounding Areas">
       <Container>
  <main>
             <div class="content">
