--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -11,6 +11,7 @@ const menuitems = [
     children: [
     { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
     { title: "Freezer Repair", path: "/services/freezer-repair" },
+    { title: "Washing Machine Repair", path: "/services/washing-machine-repair" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
     ],
