--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -12,6 +12,8 @@ const menuitems = [
     { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
     { title: "Freezer Repair", path: "/services/freezer-repair" },
     { title: "Washing Machine Repair", path: "/services/washing-machine-repair" },
+    { title: "Dryer Repair", path: "/services/dryer-repair" },
+    { title: "_____________" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
     ],
