--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -14,6 +14,7 @@ const menuitems = [
     { title: "Washing Machine Repair", path: "/services/washing-machine-repair" },
     { title: "Dryer Repair", path: "/services/dryer-repair" },
     { title: "Stove/Range Repair", path: "/services/stove-repair" },
+    { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
     { title: "_____________" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
