--- a/src/pages/services/dishwasher-repair.astro
+++ b/src/pages/services/dishwasher-repair.astro
@@ -14,8 +14,11 @@ import Layout from "@layouts/Layout.astro";
         <h1><span class="animate-charcter">Same-Day Dishwasher Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/dishwasher-repair-los-angeles-and-surrounding-area.webp" width="500" height="500" alt="Dishwasher Repair Services Los Angeles - technician repairing a dryer">
+        <Contactbtn />
+     </div>
+        <div class="col-two">
         <p style="text-align: start">When your dishwasher isn't cleaning dishes properly or experiencing issues, it's essential to call in the experts. Same Day Appliance Repair is your trusted source for fast and efficient dishwasher repair services in Los Angeles. We specialize in repairing dishwashers, offering a quick and hassle-free service. Contact us for more information and to book your same-day service appointment.</p><p style="text-align: start">At Same Day Appliance Repair, we have developed a team of professionally trained technicians committed to continuously learning about the latest advancements in appliance technology. We provide top-notch appliance repair services backed by solid guarantees, including up to a 3-month warranty on parts and labor. Our competitive pricing policy ensures you receive the best value for your repairs!</p><p style="text-align: start">Our service calls often uncover that many dishwasher issues can be fixed with simple solutions, such as unclogging spray arms or replacing a faulty valve. However, our certified repair technicians are equipped to tackle even the most complex repairs efficiently, thanks to their vast experience. We service dishwashers from all major brands, including Bosch, GE, Whirlpool, and more. Our appliance repair company cares about solving your dishwasher problems, no matter how complicated they may be.</p>
-     <Contactbtn />
+
      
      </div>
      <div class="col-two">
