--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -15,8 +15,8 @@ const menuitems = [
     { title: "Dryer Repair", path: "/services/dryer-repair" },
     { title: "Stove/Range Repair", path: "/services/stove-repair" },
     { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
-    { title: "Oven Repair", path: "/services/oven-repair" },
-    { title: "ooktop Repair", path: "/services/cooktop-repair" },
+    { title: "Oven Repair", path: "/services/oven-repair"},
+    { title: "Cooktop Repair", path: "/services/cooktop-repair"},
     { title: "_____________" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
