--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -17,6 +17,7 @@ const menuitems = [
     { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
     { title: "Oven Repair", path: "/services/oven-repair"},
     { title: "Cooktop Repair", path: "/services/cooktop-repair"},
+    { title: "Microwave Repair", path: "/services/microwave-repair"},
     { title: "&nbps; &nbsp; _____________" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
