--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -19,6 +19,7 @@ const menuitems = [
     { title: "Cooktop Repair", path: "/services/cooktop-repair"},
     { title: "Microwave Repair", path: "/services/microwave-repair"},
     { title: "Range Hood Repair", path: "/services/range-hood-repair"},
+    { title: "Fireplace Repair", path: "/services/fireplace-repair"},
     { title: "____________________" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
