--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -20,6 +20,7 @@ const menuitems = [
     { title: "Microwave Repair", path: "/services/microwave-repair"},
     { title: "Range Hood Repair", path: "/services/range-hood-repair"},
     { title: "Fireplace Repair", path: "/services/fireplace-repair"},
+    { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair"},
     { title: "____________________" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     
