--- a/src/pages/services/dryer-repair.astro
+++ b/src/pages/services/dryer-repair.astro
@@ -13,7 +13,7 @@ import Layout from "@layouts/Layout.astro";
     <main>
         <h1><span class="animate-charcter">Same-Day Dryer Repair</span> in Los Angeles and Surrounding Areas</h1>
      
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-dryer-repair-service-los-angeles-and-surrounding-area.webp" width="500" height="500" alt="Dryer Repair SErvices Los Angeles - technician repairing a dryer">
+     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-dryer-repair-service-los-angeles-and-surrounding-area.webp" width="500" height="500" alt="Dryer Repair Services Los Angeles - technician repairing a dryer">
      
      <Contactbtn />
      
