--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -6,7 +6,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="">
+ <Layout title="Same Day Appliance Repair - Los Feliz: (424) 325-0520">
       <Container>
 <div class="content">
     <h4>Commercial & Household Appliance Repair Los Feliz</h4>
