--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -6,7 +6,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="">
+ <Layout title="Same Day Appliance Repair - Marina Del Rey: (424) 325-0520">
       <Container>
 <div class="category category-0" style="background-color:#ffffff;">
     <div class="container">
