--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -6,7 +6,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="">
+ <Layout title="Same Day Appliance Repair - Santa Monica: (424) 325-0520">
       <Container>
         <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
             <h1>Same Day Appliance Repair - Santa Monica</h1>
