--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -7,7 +7,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="">
+<Layout title="Same Day Appliance Repair: (424) 325-0520 or BOOK Online">
   <Container>
     <main>
     
