--- a/src/pages/areas/los-angeles-and-surrounding-areas.astro
+++ b/src/pages/areas/los-angeles-and-surrounding-areas.astro
@@ -7,7 +7,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="">
+ <Layout title="Same Day Appliance Repair - Los Angeles: (424) 325-0520">
       <Container>
  <main>
    <h1><span class="animate-charcter">Appliance Repair</span> in Los Angeles and Surrounding Areas</h1>
