--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -9,7 +9,7 @@ import Layout from "@layouts/Layout.astro";
 
 
 ---
-<Layout title="Appliance Repair Pasadena">
+<Layout title="Same Day Appliance Repair - Pasadena: (424) 325-0520">
 <Container>
 <div class="content">
 <h1 class="top"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
