--- a/src/pages/brands/commercial-and-household.astro
+++ b/src/pages/brands/commercial-and-household.astro
@@ -6,7 +6,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="">
+ <Layout title="Same Day Appliance Repair - We Fix All Brands: (424) 325-0520">
       <Container>
 <div class="content">
     <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;"><h1>Trusted Appliance Repair Services for Commercial and Household Brands</h1>
