--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const resolvedImageWithDomain = new URL(
 const { title } = Astro.props;
 
 const makeTitle = title
-  ? title + " | " + "Call: (323)540-5890"
+  ? title + " | " + "(424) 325-0520"
   : "Same Day Appliance Repair Services";
 ---
 
