--- a/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
@@ -8,7 +8,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 
 ---
-<Layout title="Commercial Refrigerator repair - Los Angeles and Surrounding Areas">
+<Layout title="Commercial Refrigerator Repair">
 <Container>
 <div class="content">
  <h1 class="top"><span class="animate-charcter">Commercial Refrigerator Repair</span> Los Angeles</h1>
