--- a/src/pages/services/refrigerator-repair.astro
+++ b/src/pages/services/refrigerator-repair.astro
@@ -8,7 +8,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 
 ---
-<Layout title="Same Day Refrigerator Repair - Los Angeles and Surrounding Areas">
+<Layout title="Same Day Refrigerator Repair">
 <Container>
 <div class="content">
  <h1 class="top"><span class="animate-charcter">Refrigerator Repair</span> Los Angeles, CA, & Surrounding Areas</h1>
