--- a/src/pages/services/cooktop-repair.astro
+++ b/src/pages/services/cooktop-repair.astro
@@ -8,7 +8,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 
 ---
-<Layout title="Same Day Cooktop Repair - Los Angeles and Surrounding Areas">
+<Layout title="Same Day Cooktop Repair">
 <Container>
     <main>
         <h1><span class="animate-charcter">Same-Day Cooktop Repair</span> in Los Angeles and Surrounding Areas</h1>
