--- a/src/pages/services/stove-repair.astro
+++ b/src/pages/services/stove-repair.astro
@@ -8,7 +8,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 
 ---
-<Layout title="Same Day Stove Repair - Los Angeles and Surrounding Areas">
+<Layout title="Same Day Stove Repair">
 <Container>
     <main>
         <h1><span class="animate-charcter">Same-Day Stove Repair</span> in Los Angeles and Surrounding Areas</h1>
