--- a/src/pages/services/washing-machine-repair.astro
+++ b/src/pages/services/washing-machine-repair.astro
@@ -7,7 +7,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
-<Layout title="Same Day Washing Machine Repair - Los Angeles and Surrounding Areas">
+<Layout title="Same Day Washing Machine Repair">
 <Container>
 <main>
 <h1><span class="animate-charcter">Same-Day Washing Machine Repair</span> in Los Angeles and Surrounding Areas</h1>
