--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -43,6 +43,10 @@ const menuitems = [
     path: "/brands/commercial-and-household",
   },
   {
+    title: "Blog",
+    path: "/blog",
+  },
+  {
     title: "Contact",
     path: "/contact",
   },
