--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -21,7 +21,7 @@ publishedBlogEntries.sort(function (a, b) {
     <Sectionhead>
       <Fragment slot="title">Our Blog</Fragment>
       <Fragment slot="desc">
-        We write about building startups and thoughts going on our mind.
+        Everything you need to know about major appliances, their repair and installation
       </Fragment>
     </Sectionhead>
     <main class="mt-16">
