--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -21,8 +21,7 @@ publishedBlogEntries.sort(function (a, b) {
     <Sectionhead>
       <Fragment slot="title">Our Blog</Fragment>
       <Fragment slot="desc">
-        Everything you need to know about major appliances, their repair and installation
-      </Fragment>
+        Everything you need to know about major appliances, their installation, repair and maintenance
     </Sectionhead>
     <main class="mt-16">
       <ul class="grid gap-16 max-w-4xl mx-auto">
