--- a/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
@@ -12,7 +12,10 @@ import Layout from "@layouts/Layout.astro";
 <Container>
 <div class="content">
  <h1 class="top"><span class="animate-charcter">Commercial Refrigerator Repair</span> Los Angeles</h1>
-    <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/commercial-refrigerator-repair-los-angeles.webp" width="600" height="232" alt="Commercial Refrogerator Repair in Los Angeles">
+    <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/commercial-refrigerator-repair-los-angeles.webp" width="500" height="500" alt="Commercial Refrogerator Repair in Los Angeles">
+        <figcaption><b>
+Commercial Refrigerator Repair Los Angeles</b>
+</figcaption><br>
         <Contactbtn />
     </div>
     <div class="col-two">
