--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -9,10 +9,11 @@ import Layout from "@layouts/Layout.astro";
  <Layout title="Same Day Appliance Repair - Los Feliz: (424) 325-0520">
       <Container>
 <div class="content">
-    <h4>Commercial & Household Appliance Repair Los Feliz</h4>
-                <img style="border-radius: 25px;" class="responsiveimg" width="600" height="600" alt="Los Feliz Same Day Apliance Repair" src="../images/same-day-appliance-repair-experts.webp"/>
+    <h1><span class="animate-charcter">Same-Day</span>  Appliance Repair Los Feliz</h1>
+                <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same Day APpliance Repair Los Feliz - technician repairing an appliance" src="../images/same-day-appliance-repair-los-feliz.webp"/>
+                <caption>Same Day Appliance Repair Los Feliz</caption>
                 <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
-                    <h1>Trusted Appliance Repair Services in Los Feliz, CA</h1>
+                    <h2>Trusted Appliance Repair Services in Los Feliz, CA</h2>
                     <p>When it comes to your home appliances, Same Day Appliance Repair is your go-to expert. Our skilled team combines extensive experience and knowledge to cater to your appliance needs in Los Feliz. Residents in Los Feliz trust us to handle a wide array of issues, from simple switch replacements to intricate compressor installations for various appliances such as refrigerators, stoves, and washers. We are well-versed in servicing all major appliance brands, including premium ones like Sub-Zero, Viking, Dacor, and Thermador.</p>
                     <h2>Committed to Timely Solutions</h2>
                     <p>At Same Day Appliance Repair, we prioritize your convenience. Our quick and efficient service ensures we arrive on the same day you contact us. Equipped with fully stocked mobile units, our technicians perform on-the-spot diagnostics and quick replacements, minimizing any disruption to your daily routine. We value your time and accommodate your scheduling preferences, providing timely appointments and courtesy calls before our arrival. We also offer emergency and weekend services without any additional charges.</p>
