--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -10,7 +10,8 @@ import Layout from "@layouts/Layout.astro";
       <Container>
 <div class="category category-0" style="background-color:#ffffff;">
     <div class="container">
-        <img style="border-radius: 25px;" class="responsiveimg" width="600" height="600" alt="Los Feliz Same Day Apliance Repair" src="../images/same-day-appliance-repair-experts.webp"/>
+        <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same-Day Appliance Repair Marina Del Rey - technician repairing a washer" src="../images/same-day-appliance-repair-marina-del-rey.webp"/>
+<caption>Same-Day Appliance Repair Marina Del Rey</caption>
         <h2>Trusted Same Day Appliance Repair Service - Marina Del Rey</h2>
                        <p>We are a top choice for same day appliance repair in Marina Del Rey. Out trained technicians also provide appliance installation and maintenance services. Customer satisfaction is our priority.</p>
         <h2>Same Day Appliance Repair, Installation, and Maintenance for Household Use</h2>
