--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -10,7 +10,7 @@ import Layout from "@layouts/Layout.astro";
       <Container>
 <div class="content">
     <h1><span class="animate-charcter">Same-Day</span>  Appliance Repair Los Feliz</h1>
-                <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same Day APpliance Repair Los Feliz - technician repairing an appliance" src="../images/same-day-appliance-repair-los-feliz.webp"/>
+                <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same Day APpliance Repair Los Feliz - technician repairing an appliance" src="/images/same-day-appliance-repair-los-feliz.webp">
                 <caption>Same Day Appliance Repair Los Feliz</caption>
                 <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
                     <h2>Trusted Appliance Repair Services in Los Feliz, CA</h2>
