--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -10,7 +10,7 @@ import Layout from "@layouts/Layout.astro";
       <Container>
         <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
             <h1>Same Day Appliance Repair - Santa Monica</h1>
-               <img style="border-radius: 25px;" class="responsiveimg" width="600" height="600" alt="Los Feliz Same Day Apliance Repair" src="../images/same-day-appliance-repair-experts.webp"/>
+               <img style="border-radius: 25px;" class="responsiveimg" width="600" height="600" alt="Los Feliz Same Day Apliance Repair" src="../images/same-day-appliance-repair-experts.webp">
                 <p>If your appliances need repair, you're at the right place. At Same Day Appliance Repair in Santa Monica, our skilled technicians excel in fixing both commercial and household appliances. We are committed to resolving various issues, from simple switch replacements to complex compressor overhauls, restoring your appliances to optimal working condition. Our expertise extends to servicing all major appliance brands, including renowned names like Sub-Zero, Viking, Dacor, and Thermador.</p>
                 <h2>Trusted and Efficient Appliance Repair - Santa Monica</h2>
                 <p>We prioritize speedy service at Same Day Appliance Repair. Our aim is to reach your doorstep on the same day you contact us. Equipped with a comprehensive inventory, our technicians swiftly diagnose issues and replace faulty components, eliminating the inconvenience of prolonged downtime. We carry genuine factory parts in our service vehicles, ensuring swift and effective on-site repairs.</p>
