--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -12,7 +12,7 @@ import Layout from "@layouts/Layout.astro";
     <div class="container">
         <h1><span class="animate-charcter">Same-Day</span> Appliance Repair Marina Del Rey</h1>
        
-        <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same-Day Appliance Repair Marina Del Rey - technician repairing a washer" src="/images/same-day-appliance-repair-marina-del-rey.webp"/>
+        <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same-Day Appliance Repair Marina Del Rey - technician repairing a washer" src="/images/same-day-appliance-repair-marina-del-rey.webp">
 <caption><b>Same-Day Appliance Repair Marina Del Rey</b></caption>
        
                        <p>We are a top choice for same day appliance repair in Marina Del Rey. Out trained technicians also provide appliance installation and maintenance services. Customer satisfaction is our priority.</p>
