--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import Layout from "@layouts/Layout.astro";
                 <div class="six-col-grid" >
               <span class="col-one-img">
 <img width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
-<p><a title="Refrigerator Repair" href="/services/refrigerator-repair"><b>Refrigerator Repair..</b></a></p>
+<p><a>Refrigerator Repair</a></p>
 <a class="grid-a" title="Same day washer repair Los Angeles" href="/book">BOOK US </a>
 </span>
  <span class="col-two-img">
@@ -108,7 +108,7 @@ import Layout from "@layouts/Layout.astro";
               <div class="six-col-grid">
   <span class="col-one-img">
                       <img width="120" height="150" loading="lazy" src="images/commercial-refrigerator-repair.webp" alt="Same day commercial refrigerator repair - Los Angeles">
-                      <p><a title="Commercial Refrigerator Repair" href="/services/commercial-refrigerator-repair-los-angeles">Refrigerator Repair</a></p>
+                      <p>Refrigerator Repair</p>
                           <a class="grid-a" title="Same day refrigerator repair Los Angeles" href="/book">BOOK US </a>
                         </span>
 
