--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Layout from "@layouts/Layout.astro";
               </div> 
               <!--End drivng truck -->
              <br>
-              <h2>Same Day Household Appliance Repair, Installation, and Maintenance.</h2>
+              <h2>Same Day Household Appliance Repair, Installation, and Maintenance</h2>
              <br>
               <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
               <br>
