--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -432,6 +432,8 @@ input[type="checkbox"]:checked + .accordion-title .arrow {
 .arrow {
   transition: transform 0.3s ease;
 }
+
+.services{margin:10px 0 10px 0;}
     </style>
   </body>
 </html>
