--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,18 +41,18 @@ import Layout from "@layouts/Layout.astro";
 </span>
  <span class="col-two-img">
 <img width="120" height="150" src="../images/freezer-stove-repair.webp" alt="Same day expert freezer repair - Los Angeles">
-<p><a title="Refrigerator Repair Los Angeles" href="/services/freezer-repair"><b>Freezer Repair</b></a></p>
+<p class="services"><a title="Refrigerator Repair Los Angeles" href="/services/freezer-repair"><b>Freezer Repair</b></a></p>
 <a class="grid-a" title='Same day freezer repair Los Angeles' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
  <span class="col-three-img">
 <img width="120" height="150" src="images/washer-repair.webp" alt="Same day expert washer repair - Los Angeles">
-<p>Washer Repair</p>
+<p class="services"><a title="Refrigerator Repair Los Angeles" href="/services/dishwasher-repair"><b>Washer Repair</b></a></p>
 <a class="grid-a" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
 
  <span class="col-four-img">
                           <img width="120" height="150" src="images/dryer-repair.webp" alt="Same day expert dryer repair - Los Angeles">
-                          <p>Dryer Repair</p>
+                          <p class="services"><a title="Refrigerator Repair Los Angeles" href="/services/dryer-repair"><b>Dryer Repair</b></a></p>
                           <a class="grid-a" title="Same day dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
