--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import Layout from "@layouts/Layout.astro";
 
  <span class="col-five-img">
                           <img width="120" height="150" src="images/range-stove-repair.webp" alt="Same day expert range/stover repair - Los Angeles">
-                          <p>Range/Stove Repair</p>
+                          <p class="services"><a title="Stove Repair Los Angeles" href="/services/stove-repair"><b>Range/Stove Repair</b></a></p>
                           <a class="grid-a" title="Same day range stove repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
