--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,31 +64,31 @@ import Layout from "@layouts/Layout.astro";
 
                       <span class="col-six-img">
                           <img width="120" height="150" src="images/dishwasher-repair.webp" alt="Same day dishwasher repair - Los Angeles">
-                          <p>Dishwasher Repair</p>
+                          <p class="services"><a title="Dishwasher Repair Los Angeles" href="/services/dishwasher-repair"><b>Dishwasher Repair</b></a></p>
                           <a class="grid-a" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span> 
      <span class="col-seven-img">
      <img width="120" height="150" src="../images/oven-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
-     <p >Oven Repair</p>
+     <p class="services"><a title="Oven Repair Los Angeles" href="/services/oven-repair"><b>Oven Repair</b></a></p>
      <a class="grid-a" title="Same day oven repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
       </span> 
       <span class="col-eight-img">
       <img width="120" height="150" src="../images/cooktop-repair.webp" alt="Same day expert freezer repair - Los Angeles">
-       <p>Coocktop Repair</p>
+       <p class="services"><a title="Cooktop Repair Los Angeles" href="/services/cooktop-repair"><b>Cooktop Repair</b></a></p>
        <a class="grid-a" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                                         <span class="col-nine-img">
                           <img width="120" height="150" src="images/microwave-repair.webp" alt="Same day microwave repair - Los Angeles">
-                          <p>Microwave Repair</p>
+                          <p class="services"><a title="Microwave Repair Los Angeles" href="/services/microwave-repair"><b>Microwave Repair</b></a></p>
                           <a class="grid-a" title="Same day microvawe repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                                           <span class="col-ten-img">
                           <img width="120" height="150" src="images/range-hood-repair.webp" alt="Same day range hood repair - Los Angeles">
-                          <p>Range Hood Repair</p>
+                          <p class="services"><a title="Range Hood Repair Los Angeles" href="/services/range-hood-repair"><b>Range Hood Repair</b></a></p>
                           <a class="grid-a" title="Same day range hood repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
             
-                        <span class="grid-img" class="col-eleven-img">
+                        <span class="col-eleven-img">
                           <img width="120" height="150" src="images/fireplace-repair.webp" alt="Same day fireplace repair - Los Angeles">
                           <p>Fireplace Repair</p>
                           <a class="grid-a" title="Expert fireplace repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
@@ -96,7 +96,7 @@ import Layout from "@layouts/Layout.astro";
 
                                           <span class="col-twelve-img">
                           <img width="120" height="150" src="images/bbq-grill-repair.webp" alt="Same day bbq grill repair - Los Angeles">
-                          <p>BBQ Grill Repair</p>
+                          <p class="services"><a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair"><b>BBQ Grill Repair</b></a></p>
                           <a class="grid-a" title="Same day bbq grill repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                        </div>
