--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ import Layout from "@layouts/Layout.astro";
             
                         <span class="col-eleven-img">
                           <img width="120" height="150" src="images/fireplace-repair.webp" alt="Same day fireplace repair - Los Angeles">
-                          <p>Fireplace Repair</p>
+                          <p class="services"><a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair"><b>Fireplace Repair</p>
                           <a class="grid-a" title="Expert fireplace repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
